Added homeless history form to HTML.

--- a/client/src/components/IntakeHTML/antiDiscrimination.html
+++ b/client/src/components/IntakeHTML/antiDiscrimination.html
@@ -39,11 +39,11 @@
           place something in writing. **
         </strong>
         <hr />
-        CLIENT SIGNATURE (adult)
+        <p>CLIENT SIGNATURE (adult)</p>
         <input type="text" name="test" placeholder="First & Last Name" />
         <input type="date" />
         <hr />
-        CLIENT SIGNATURE (adult)
+        <p>CLIENT SIGNATURE (adult)</p>
         <input type="text" placeholder="First & Last Name" />
         <input type="date" />
       </form>
