--- a/client/src/components/IntakeHTML/guestWaiver.html
+++ b/client/src/components/IntakeHTML/guestWaiver.html
@@ -62,11 +62,11 @@
           <u>**MUST BE SIGNED BY ALL ADULTS IN HOUSEHOLD**</u>
         </strong>
         <hr />
-        CLIENT SIGNATURE (adult)
+        <p>CLIENT SIGNATURE (adult)</p>
         <input type="text" name="test" placeholder="First & Last Name" />
         <input type="date" />
         <hr />
-        CLIENT SIGNATURE (adult)
+        <p>CLIENT SIGNATURE (adult)</p>
         <input type="text" placeholder="First & Last Name" />
         <input type="date"/>
         <p>
